--- a/app.component.html
+++ b/app.component.html
@@ -1,6 +1,10 @@
 
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<!-- <app-visitor-profile [getUser]="getUser" ></app-visitor-profile> 
+  <app-profile [getUser]="getUser" ></app-profile> 
+   <app-creator-profile [getUser]="getUser" ></app-creator-profile>  -->
 
+<!-- <app-login></app-login> -->
 <!-- <a routerLink="/register">Register</a> -->
 
