--- a/creator-profile.component.css
+++ b/creator-profile.component.css
@@ -56,6 +56,11 @@
     margin-top: 5px;
   }
 
+  .back{
+    margin-top: 2%;
+    margin-left: 4%;
+  }
+ 
   /* .savebtn{
     width: 46px;
     background-color: #ece4e4; 
