--- a/creator.component.html
+++ b/creator.component.html
@@ -1,4 +1,10 @@
+<!-- <div>
+   <a mat-button class="back" routerLink="/"><mat-icon>arrow_back</mat-icon>Back</a>
+</div>  -->
 <div class="container">
+   <div>
+   <a mat-button class="back" routerLink="/"><mat-icon>arrow_back</mat-icon>Back</a>
+
    <a routerLink="/cprofile"><mat-icon class="icon">account_circle</mat-icon></a>
    <!-- <div class="pimg">
       <img [src]="">
@@ -46,14 +52,15 @@
         </div><br> -->
        
        <div>
-           <button mat-raised-button type="submit"  class="submitbtn">Create Blog</button>
+           <button mat-raised-button type="submit" [disabled]="createForm.invalid"  class="submitbtn">Create Blog</button>
 
-           <button mat-raised-button   class="draftbtn">Draft</button>
+           <button mat-raised-button  [disabled]="createForm.invalid" class="draftbtn">Draft</button>
        </div>
      
    </form>
      </mat-card-content>
      </mat-card> 
+     </div>
      </div>
    
 
