--- a/employee-profile.component.css
+++ b/employee-profile.component.css
@@ -19,6 +19,20 @@ table {
   margin-right: 10px;
 }
 
+.icon{
+  cursor: pointer;
+  font-size: 50px;  
+  width: 50px;  
+  height: 50px; 
+  position: absolute;
+  top: 72px;
+  right: 14px;
+}
+
+.back{
+  margin-top: 2%;
+  margin-left: 4%;
+}
 
 
 
