--- a/navbar.component.html
+++ b/navbar.component.html
@@ -11,13 +11,14 @@
         
        <!----<mat-icon aria-hidden="false" aria-label="home icon" fontIcon="home"></mat-icon>-->
         <a mat-button routerLink="/">Home</a>
-         <a mat-button routerLink="/creator">Create Blog</a>  
+         <!-- <a mat-button routerLink="/creator">Create Blog</a>  
         <a mat-button routerLink="/employee">Employee</a> 
         <a mat-button routerLink="/profile">Profile</a>
-        <a mat-button routerLink="/eprofile">empprofile</a>  
-        <a mat-button routerLink="/cprofile">creatorprofile</a> 
-        <a mat-button routerLink="/vprofile">visitorprofile</a> 
-        
+         <a mat-button routerLink="/eprofile">empprofile</a>  -->
+        <!-- <a mat-button routerLink="/login/cprofile">creatorprofile</a> 
+        <a mat-button routerLink="/login/vprofile">visitorprofile</a>  --> 
+        <!-- <a mat-button routerLink="/eprofile">empprofile</a>  -->
+        <!-- <a mat-button routerLink="/vprofile">visitorprofile</a> -->
         
         <!--<link rel="stylesheet" href="navbar.component.css">-->
         
@@ -25,7 +26,7 @@
         <mat-icon>assignment_ind</mat-icon>Register</a>
         <a mat-raised-button style="background-color:rgb(233, 171, 90)" routerLink="/login"><mat-icon>lock</mat-icon>Login</a>
     </mat-toolbar>
-
+    
     
     
     
