--- a/profile.component.css
+++ b/profile.component.css
@@ -27,6 +27,11 @@
     width: 70%; 
     word-break: break-all; 
   }
+
+  .back{
+    margin-top: 2%;
+    margin-left: 4%;
+  }
   
   /* .savebtn{
     width: 46px;
