--- a/visitor-profile.component.css
+++ b/visitor-profile.component.css
@@ -7,7 +7,7 @@
     margin-bottom: 50px;
     display: flex;
     margin:auto; 
-    margin-top: 20%;
+    margin-top: 15%;
     border-radius: 9px;
     /* background-color: rgba(5, 119, 81, 0.329); */
 } 
@@ -27,3 +27,8 @@
     margin-bottom: 10px;
     margin-top: 5px;
 }
+
+.back{
+    margin-top: 2%;
+    margin-left: 4%;
+  }
